--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "NFC便签",
+    "navigationBarTitleText": "Note Slip",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
