--- a/h5/package.json
+++ b/h5/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
+    "build": "vite build && cp service-worker.js dist/service-worker.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "build-sw": "workbox generateSW workbox-config.js"
