--- a/h5/public/manifest.json
+++ b/h5/public/manifest.json
@@ -13,7 +13,8 @@
       "type": "image/svg+xml"
     }
   ],
-  "start_url": "/",
+  "scope": "/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000"
